Fixed field spacing

--- a/web/themes/custom/tallgrasschurch/css/tallgrasschurch.css
+++ b/web/themes/custom/tallgrasschurch/css/tallgrasschurch.css
@@ -934,8 +934,14 @@ form .preview {
     grid-column-end: span 3;
     padding-left: 20px;
   }
+  .layout--sidebar-right .layout__sidebar .field {
+    margin-bottom: 40px;
+  }
   .layout--sidebar-right .layout__sidebar .field .field__label {
     margin-top: 0;
+  }
+  .layout--sidebar-right .layout__sidebar .field:last-child {
+    margin-bottom: 0;
   }
   .layout--sidebar-right .layout__bottom {
     grid-column-end: span 10;
@@ -1991,7 +1997,6 @@ form .preview {
 }
 
 .field--field-tags {
-  margin-top: 40px;
   font-size: .7em;
   line-height: 1.5;
 }
