--- a/web/themes/custom/tallgrasschurch/src/css/fields/_field-tags.scss
+++ b/web/themes/custom/tallgrasschurch/src/css/fields/_field-tags.scss
@@ -4,7 +4,6 @@
 
 
 .field--field-tags {
-  margin-top: $grid-gutter-width * 2;
   font-size: .7em;
   line-height: $line-height-base;
 
